--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,7 +124,8 @@
 
 @layer utilities {
   .animate-scroll {
-    animation: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
+    animation: scroll var(--animation-duration, 40s)
+      var(--animation-direction, forwards) linear infinite;
   }
 
   @keyframes scroll {
@@ -165,7 +166,11 @@
 }
 
 .bg-grid-white\/\[0\.02\] {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.02) 1px, transparent 1px), linear-gradient(90deg, rgba(255, 255, 255, 0.02) 1px, transparent 1px);
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.02) 1px,
+      transparent 1px
+    ),
+    linear-gradient(90deg, rgba(255, 255, 255, 0.02) 1px, transparent 1px);
   background-size: 50px 50px;
 }
 
@@ -184,7 +189,7 @@
 /* Gaya untuk Notion Code Block */
 .notion-code {
   background-color: #191a25 !important;
-  border-radius: 10px !important;
+  border-radius: 6px !important;
   padding: 16px !important;
   font-family: "JetBrains Mono", monospace !important;
   font-size: 14px !important;
@@ -218,28 +223,16 @@
   top: -10px !important;
   bottom: auto !important;
   transform: translateX(-50%) !important;
-  /* left: 50% !important; */
-  /* right: 20px !important; */
 }
-
-/* Animasi dan styling tooltip */
-/* .notion-code-copy-tooltip::after {
-  content: "" !important;
-  position: absolute !important;
-  top: 100% !important;
-  left: 50% !important;
-  margin-left: -5px !important;
-  border-width: 5px !important;
-  border-style: solid !important;
-  border-color: #333 transparent transparent transparent !important;
-} */
 
 .notion-text {
   color: indigo !important;
 }
 
 .medium-zoom-image {
-  /* margin: 0 !important; */
-  /* margin: 0 !important; */
-  border-radius: 10px !important;
+  border-radius: 6px !important;
+}
+
+.notion-simple-table-row {
+  border: red 1px solid !important;
 }
