--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,7 +124,8 @@
 
 @layer utilities {
   .animate-scroll {
-    animation: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
+    animation: scroll var(--animation-duration, 40s)
+      var(--animation-direction, forwards) linear infinite;
   }
 
   @keyframes scroll {
@@ -165,7 +166,11 @@
 }
 
 .bg-grid-white\/\[0\.02\] {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.02) 1px, transparent 1px), linear-gradient(90deg, rgba(255, 255, 255, 0.02) 1px, transparent 1px);
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.02) 1px,
+      transparent 1px
+    ),
+    linear-gradient(90deg, rgba(255, 255, 255, 0.02) 1px, transparent 1px);
   background-size: 50px 50px;
 }
 
@@ -176,6 +181,12 @@
 /* Hapus properti Notion yang tidak perlu */
 .notion-collection-page-properties {
   display: none !important;
+}
+
+.notion-page {
+  margin: 0 !important;
+  max-width: 100%;
+  padding: 0rem !important ;
 }
 
 /* Wrapper prose umum */
@@ -195,8 +206,8 @@
 .prose h1 {
   font-size: 2.25rem;
   font-weight: 700;
-  margin-top: 2rem;
-  margin-bottom: 1rem;
+  /* margin-top: 2rem; */
+  /* margin-bottom: 1rem; */
   letter-spacing: -0.02em;
 }
 
@@ -204,17 +215,29 @@
 .prose h2 {
   font-size: 1.75rem;
   font-weight: 700;
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-  padding-bottom: 0.3rem;
+  margin-top: 1rem !important;
+  /* margin-bottom: 1rem; */
+  /* padding-bottom: 0.3rem; */
 }
 
 /* Heading 3 */
 .prose h3 {
   font-size: 1.4rem;
   font-weight: 600;
-  margin-top: 1.5rem;
-  margin-bottom: 0.75rem;
+  margin-top: 1rem !important;
+  /* margin-bottom: 0.75rem; */
+}
+
+/* Heading 4 */
+.prose h4 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-top: 1rem !important;
+  /* margin-bottom: 0.75rem; */
+}
+
+.notion-text {
+  text-align: justify !important;
 }
 
 /* Link */
@@ -269,8 +292,8 @@
 /* Image */
 .prose img {
   border-radius: 0.5rem;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  /* margin-top: 1.5rem; */
+  /* margin-bottom: 1.5rem; */
 }
 
 /* List */
