update UI blog page and add bnsp certificate

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -194,7 +194,7 @@
 
 /* Dark mode */
 .dark .prose {
-  color: rgb(243 244 246); /* gray-100 */
+  color: rgb(243 244 246); /* slate-100 */
 }
 
 /* Heading 1 */
